# nn-playground

./: .gitignore  README.md  functional.py  initialisations.py  layers.py  manipulate_data.py  metrics.py  nn.py  optimisers.py  pyproject.toml  regularisation.py
